--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -6,11 +6,11 @@
  syndicalism:0 "Syndicalism"
  syndicalism_noun:0 "Syndicalist"
  syndicalist_desc:0 "A revolutionary syndicalist regime"
- syndicalism_desc:0 "Revolutionary Syndicalist"
+ syndicalism_desc:0 "Revolutionary"
  social_democracy:0 "Social Democracy"
  social_democracy_noun:0 "Social Democrat"
  social_democrat_desc:0 "A social democrat regime"
- social_democracy_desc:0 "Social Democratic"
+ social_democracy_desc:0 "Democratic"
  liberalism:0 "Liberalism"
  liberalism_noun:0 "Liberal"
  liberal_desc:0 "A market liberal regime"
@@ -21,8 +21,8 @@
  conservatism_desc:0 "Liberal Conservative"
  monarchism:0 "Monarchism"
  monarchism_noun:0 "Monarchist"
- monarchist_desc:0 "An absolute monarchist regime"
- monarchism_desc:0 "Absolutist"
+ monarchist_desc:0 "An autocratic monarchist regime"
+ monarchism_desc:0 "Autocratic"
  fascism:0 "Fascism"
  fascism_noun:0 "Fascist"
  fascist_desc:0 "A corporatist fascist regime"
@@ -34,8 +34,8 @@
  anarchism:0 "Anarchism"
  anarchism_noun:0 "Anarchist"
  anarchist_desc:0 "A libertarian anarchist regime"
- anarchism_desc:0 "Libertarian Anarchist"
+ anarchism_desc:0 "Libertarian"
  christian_democracy:0 "Christian Democracy"
  christian_democracy_noun:0 "Christian Democrat"
  christian_democrat_desc:0 "A christian democrat regime"
- christian_democracy_desc:0 "Christian Democratic"
+ christian_democracy_desc:0 "Democratic"
