--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -672,6 +672,38 @@
  COL_ultranationalism:0 "Colombia"
  ###################################################
  ###################################################
+ COS_anarchism_ADJ:0 "Central American"
+ COS_anarchism_DEF:0 "The Federation of Central America"
+ COS_anarchism:0 "Federation of Central America"
+ COS_monarchism_ADJ:0 "Central American"
+ COS_monarchism_DEF:0 "The Federation of Central America"
+ COS_monarchism:0 "Federation of Central America"
+ COS_christian_democracy_ADJ:0 "Central American"
+ COS_christian_democracy_DEF:0 "The Federation of Central America"
+ COS_christian_democracy:0 "Federation of Central America"
+ COS_communism_ADJ:0 "Central American"
+ COS_communism_DEF:0 "The Federation of Central America"
+ COS_communism:0 "Federation of Central America"
+ COS_conservatism_ADJ:0 "Central American"
+ COS_conservatism_DEF:0 "The Federation of Central America"
+ COS_conservatism:0 "Federation of Central America"
+ COS_fascism_ADJ:0 "Central American"
+ COS_fascism_DEF:0 "The Federation of Central America"
+ COS_fascism:0 "Federation of Central America"
+ COS_liberalism_ADJ:0 "Central American"
+ COS_liberalism_DEF:0 "The Federation of Central America"
+ COS_liberalism:0 "Federation of Central America"
+ COS_social_democracy_ADJ:0 "Central American"
+ COS_social_democracy_DEF:0 "The Federation of Central America"
+ COS_social_democracy:0 "Federation of Central America"
+ COS_syndicalism_ADJ:0 "Central American"
+ COS_syndicalism_DEF:0 "The Federation of Central America"
+ COS_syndicalism:0 "Federation of Central America"
+ COS_ultranationalism_ADJ:0 "Central American"
+ COS_ultranationalism_DEF:0 "The Federation of Central America"
+ COS_ultranationalism:0 "Federation of Central America"
+ ###################################################
+ ###################################################
  CRO_anarchism_ADJ:0 "Slovenian"
  CRO_anarchism_DEF:0 "The Slovenia"
  CRO_anarchism:0 "Slovenia"
@@ -704,36 +736,36 @@
  CRO_ultranationalism:0 "Slovenia"
  ###################################################
  ###################################################
- CUB_anarchism_ADJ:0 "Central American"
- CUB_anarchism_DEF:0 "The Federation of Central America"
- CUB_anarchism:0 "Federation of Central America"
- CUB_monarchism_ADJ:0 "Central American"
- CUB_monarchism_DEF:0 "The Federation of Central America"
- CUB_monarchism:0 "Federation of Central America"
- CUB_christian_democracy_ADJ:0 "Central American"
- CUB_christian_democracy_DEF:0 "The Federation of Central America"
- CUB_christian_democracy:0 "Federation of Central America"
- CUB_communism_ADJ:0 "Central American"
- CUB_communism_DEF:0 "The Federation of Central America"
- CUB_communism:0 "Federation of Central America"
- CUB_conservatism_ADJ:0 "Central American"
- CUB_conservatism_DEF:0 "The Federation of Central America"
- CUB_conservatism:0 "Federation of Central America"
- CUB_fascism_ADJ:0 "Central American"
- CUB_fascism_DEF:0 "The Federation of Central America"
- CUB_fascism:0 "Federation of Central America"
- CUB_liberalism_ADJ:0 "Central American"
- CUB_liberalism_DEF:0 "The Federation of Central America"
- CUB_liberalism:0 "Federation of Central America"
- CUB_social_democracy_ADJ:0 "Central American"
- CUB_social_democracy_DEF:0 "The Federation of Central America"
- CUB_social_democracy:0 "Federation of Central America"
- CUB_syndicalism_ADJ:0 "Central American"
- CUB_syndicalism_DEF:0 "The Federation of Central America"
- CUB_syndicalism:0 "Federation of Central America"
- CUB_ultranationalism_ADJ:0 "Central American"
- CUB_ultranationalism_DEF:0 "The Federation of Central America"
- CUB_ultranationalism:0 "Federation of Central America"
+ CUB_anarchism_ADJ:0 "Cuban"
+ CUB_anarchism_DEF:0 "The Cuba"
+ CUB_anarchism:0 "Cuba"
+ CUB_monarchism_ADJ:0 "Cuban"
+ CUB_monarchism_DEF:0 "The Cuba"
+ CUB_monarchism:0 "Cuba"
+ CUB_christian_democracy_ADJ:0 "Cuban"
+ CUB_christian_democracy_DEF:0 "The Cuba"
+ CUB_christian_democracy:0 "Cuba"
+ CUB_communism_ADJ:0 "Cuban"
+ CUB_communism_DEF:0 "The Cuba"
+ CUB_communism:0 "Cuba"
+ CUB_conservatism_ADJ:0 "Cuban"
+ CUB_conservatism_DEF:0 "The Cuba"
+ CUB_conservatism:0 "Cuba"
+ CUB_fascism_ADJ:0 "Cuban"
+ CUB_fascism_DEF:0 "The Cuba"
+ CUB_fascism:0 "Cuba"
+ CUB_liberalism_ADJ:0 "Cuban"
+ CUB_liberalism_DEF:0 "The Cuba"
+ CUB_liberalism:0 "Cuba"
+ CUB_social_democracy_ADJ:0 "Cuban"
+ CUB_social_democracy_DEF:0 "The Cuba"
+ CUB_social_democracy:0 "Cuba"
+ CUB_syndicalism_ADJ:0 "Cuban"
+ CUB_syndicalism_DEF:0 "The Cuba"
+ CUB_syndicalism:0 "Cuba"
+ CUB_ultranationalism_ADJ:0 "Cuban"
+ CUB_ultranationalism_DEF:0 "The Cuba"
+ CUB_ultranationalism:0 "Cuba"
  ###################################################
  ###################################################
  CZE_anarchism_ADJ:0 "West Slavic"
@@ -862,6 +894,38 @@
  DES_ultranationalism_ADJ:0 "American"
  DES_ultranationalism_DEF:0 "The Deseret"
  DES_ultranationalism:0 "Deseret"
+ ###################################################
+ ###################################################
+ DOM_anarchism_ADJ:0 "Dominican"
+ DOM_anarchism_DEF:0 "The Dominican Republic"
+ DOM_anarchism:0 "Dominican Republic"
+ DOM_monarchism_ADJ:0 "Dominican"
+ DOM_monarchism_DEF:0 "The Dominican Republic"
+ DOM_monarchism:0 "Dominican Republic"
+ DOM_christian_democracy_ADJ:0 "Dominican"
+ DOM_christian_democracy_DEF:0 "The Dominican Republic"
+ DOM_christian_democracy:0 "Dominican Republic"
+ DOM_communism_ADJ:0 "Dominican"
+ DOM_communism_DEF:0 "The Dominican Republic"
+ DOM_communism:0 "Dominican Republic"
+ DOM_conservatism_ADJ:0 "Dominican"
+ DOM_conservatism_DEF:0 "The Dominican Republic"
+ DOM_conservatism:0 "Dominican Republic"
+ DOM_fascism_ADJ:0 "Dominican"
+ DOM_fascism_DEF:0 "The Dominican Republic"
+ DOM_fascism:0 "Dominican Republic"
+ DOM_liberalism_ADJ:0 "Dominican"
+ DOM_liberalism_DEF:0 "The Dominican Republic"
+ DOM_liberalism:0 "Dominican Republic"
+ DOM_social_democracy_ADJ:0 "Dominican"
+ DOM_social_democracy_DEF:0 "The Dominican Republic"
+ DOM_social_democracy:0 "Dominican Republic"
+ DOM_syndicalism_ADJ:0 "Dominican"
+ DOM_syndicalism_DEF:0 "The Dominican Republic"
+ DOM_syndicalism:0 "Dominican Republic"
+ DOM_ultranationalism_ADJ:0 "Dominican"
+ DOM_ultranationalism_DEF:0 "The Dominican Republic"
+ DOM_ultranationalism:0 "Dominican Republic"
  ###################################################
  ###################################################
  ECU_anarchism_ADJ:0 "Ecuadorian"
