--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -2,15 +2,15 @@
  AFN_fra_social_democracy_ADJ:0 "French African"
  AFN_fra_social_democracy_DEF:0 "The French Africa"
  AFN_fra_social_democracy:0 "French Africa"
- ANG_por_monarchism_ADJ:0 "Angolan"
- ANG_por_monarchism_DEF:0 "The Province of Angola"
- ANG_por_monarchism:0 "Province of Angola"
+ ANG_por_fascism_ADJ:0 "Angolan"
+ ANG_por_fascism_DEF:0 "The Province of Angola"
+ ANG_por_fascism:0 "Province of Angola"
  AST_syn_syndicalism_ADJ:0 "Australasian"
- AST_syn_syndicalism_DEF:0 "The Union of Australasia"
- AST_syn_syndicalism:0 "Union of Australasia"
+ AST_syn_syndicalism_DEF:0 "The Australasian Syndicate"
+ AST_syn_syndicalism:0 "Australasian Syndicate"
  AUS_gre_ultranationalism_ADJ:0 "Austrian"
- AUS_gre_ultranationalism_DEF:0 "The Greater Austria"
- AUS_gre_ultranationalism:0 "Greater Austria"
+ AUS_gre_ultranationalism_DEF:0 "The Federal State of Greater Austria"
+ AUS_gre_ultranationalism:0 "Federal State of Greater Austria"
  BAH_con_conservatism_ADJ:0 "Brazilian"
  BAH_con_conservatism_DEF:0 "The Confederation of the Equator"
  BAH_con_conservatism:0 "Confederation of the Equator"
@@ -24,8 +24,8 @@
  COG_bel_monarchism_DEF:0 "The Belgian Congo"
  COG_bel_monarchism:0 "Belgian Congo"
  CRO_gre_fascism_ADJ:0 "Croatian"
- CRO_gre_fascism_DEF:0 "The Greater Croatia"
- CRO_gre_fascism:0 "Greater Croatia"
+ CRO_gre_fascism_DEF:0 "The State of Greater Croatia"
+ CRO_gre_fascism:0 "State of Greater Croatia"
  DDR_com_communism_ADJ:0 "Volga German"
  DDR_com_communism_DEF:0 "The Volga German ASSR"
  DDR_com_communism:0 "Volga German ASSR"
@@ -45,8 +45,8 @@
  GER_com_communism_DEF:0 "The German SFSR"
  GER_com_communism:0 "German SFSR"
  ISR_jud_conservatism_ADJ:0 "Judean"
- ISR_jud_conservatism_DEF:0 "The New Judea"
- ISR_jud_conservatism:0 "New Judea"
+ ISR_jud_conservatism_DEF:0 "The State of New Judea"
+ ISR_jud_conservatism:0 "State of New Judea"
  ITA_ana_anarchism_ADJ:0 "Italian"
  ITA_ana_anarchism_DEF:0 "The Italian Anarchist Federation"
  ITA_ana_anarchism:0 "Italian Anarchist Federation"
@@ -74,15 +74,15 @@
  MON_com_communism_ADJ:0 "Buryat-Mongolian"
  MON_com_communism_DEF:0 "The Buryat-Mongol ASSR"
  MON_com_communism:0 "Buryat-Mongol ASSR"
- MZB_por_monarchism_ADJ:0 "Mozambican"
- MZB_por_monarchism_DEF:0 "The Portuguese East Africa"
- MZB_por_monarchism:0 "Portuguese East Africa"
+ MZB_por_fascism_ADJ:0 "Mozambican"
+ MZB_por_fascism_DEF:0 "The Portuguese East Africa"
+ MZB_por_fascism:0 "Portuguese East Africa"
  NAT_bri_monarchism_ADJ:0 "South African"
- NAT_bri_monarchism_DEF:0 "The Natal"
- NAT_bri_monarchism:0 "Natal"
+ NAT_bri_monarchism_DEF:0 "The Colony of Natal"
+ NAT_bri_monarchism:0 "Colony of Natal"
  NEW_bri_monarchism_ADJ:0 "Newfoundlander"
- NEW_bri_monarchism_DEF:0 "The Newfoundland"
- NEW_bri_monarchism:0 "Newfoundland"
+ NEW_bri_monarchism_DEF:0 "The Dominion of Newfoundland"
+ NEW_bri_monarchism:0 "Dominion of Newfoundland"
  NIG_bri_monarchism_ADJ:0 "West African"
  NIG_bri_monarchism_DEF:0 "The British West Africa"
  NIG_bri_monarchism:0 "British West Africa"
@@ -96,8 +96,8 @@
  RAJ_bri_monarchism_DEF:0 "The British Empire"
  RAJ_bri_monarchism:0 "British Empire"
  SAF_syn_syndicalism_ADJ:0 "South African"
- SAF_syn_syndicalism_DEF:0 "The Union of South Africa"
- SAF_syn_syndicalism:0 "Union of South Africa"
+ SAF_syn_syndicalism_DEF:0 "The Syndicate of South Africa"
+ SAF_syn_syndicalism:0 "Syndicate of South Africa"
  SAO_syn_syndicalism_ADJ:0 "Brazilian"
  SAO_syn_syndicalism_DEF:0 "The Piratini Union"
  SAO_syn_syndicalism:0 "Piratini Union"
@@ -105,14 +105,14 @@
  SOV_com_communism_DEF:0 "The Russian SFSR"
  SOV_com_communism:0 "Russian SFSR"
  TGN_bri_monarchism_ADJ:0 "Tanganyikan"
- TGN_bri_monarchism_DEF:0 "The Tanganyika"
- TGN_bri_monarchism:0 "Tanganyika"
+ TGN_bri_monarchism_DEF:0 "The Tanganyika Territory"
+ TGN_bri_monarchism:0 "Tanganyika Territory"
  UKR_com_communism_ADJ:0 "Ukrainian"
  UKR_com_communism_DEF:0 "The Ukrainian SSR"
  UKR_com_communism:0 "Ukrainian SSR"
  UOA_syn_syndicalism_ADJ:0 "American"
- UOA_syn_syndicalism_DEF:0 "The Union of America"
- UOA_syn_syndicalism:0 "Union of America"
+ UOA_syn_syndicalism_DEF:0 "The Syndicalist League of America"
+ UOA_syn_syndicalism:0 "Syndicalist League of America"
  VIN_fra_social_democracy_ADJ:0 "Indochinese"
  VIN_fra_social_democracy_DEF:0 "The Indochinese Federation"
  VIN_fra_social_democracy:0 "Indochinese Federation"
