--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -8,6 +8,9 @@
  AST_syn_syndicalism_ADJ:0 "Australasian"
  AST_syn_syndicalism_DEF:0 "The Australasian Syndicate"
  AST_syn_syndicalism:0 "Australasian Syndicate"
+ AUS_gre_fascism_ADJ:0 "Austrian"
+ AUS_gre_fascism_DEF:0 "The Federal State of Greater Austria"
+ AUS_gre_fascism:0 "Federal State of Greater Austria"
  AUS_gre_ultranationalism_ADJ:0 "Austrian"
  AUS_gre_ultranationalism_DEF:0 "The Federal State of Greater Austria"
  AUS_gre_ultranationalism:0 "Federal State of Greater Austria"
@@ -20,12 +23,18 @@
  BRA_aut_monarchism_ADJ:0 "Brazilian"
  BRA_aut_monarchism_DEF:0 "The Empire of Brazil"
  BRA_aut_monarchism:0 "Empire of Brazil"
+ CHI_kuo_ultranationalism_ADJ:0 "Chinese"
+ CHI_kuo_ultranationalism_DEF:0 "The Kuomintang"
+ CHI_kuo_ultranationalism:0 "Kuomintang"
  COG_bel_monarchism_ADJ:0 "Congolese"
  COG_bel_monarchism_DEF:0 "The Belgian Congo"
  COG_bel_monarchism:0 "Belgian Congo"
  CRO_gre_fascism_ADJ:0 "Croatian"
  CRO_gre_fascism_DEF:0 "The State of Greater Croatia"
  CRO_gre_fascism:0 "State of Greater Croatia"
+ CRO_gre_ultranationalism_ADJ:0 "Croatian"
+ CRO_gre_ultranationalism_DEF:0 "The State of Greater Croatia"
+ CRO_gre_ultranationalism:0 "State of Greater Croatia"
  DDR_com_communism_ADJ:0 "Volga German"
  DDR_com_communism_DEF:0 "The Volga German ASSR"
  DDR_com_communism:0 "Volga German ASSR"
@@ -44,6 +53,9 @@
  GER_com_communism_ADJ:0 "German"
  GER_com_communism_DEF:0 "The German SFSR"
  GER_com_communism:0 "German SFSR"
+ GXC_fuj_social_democracy_ADJ:0 "Chinese"
+ GXC_fuj_social_democracy_DEF:0 "The Fujian People’s Government"
+ GXC_fuj_social_democracy:0 "Fujian People’s Government"
  ISR_jud_conservatism_ADJ:0 "Judean"
  ISR_jud_conservatism_DEF:0 "The State of New Judea"
  ISR_jud_conservatism:0 "State of New Judea"
@@ -68,6 +80,9 @@
  MAL_bri_monarchism_ADJ:0 "Malaysian"
  MAL_bri_monarchism_DEF:0 "The British Malaya"
  MAL_bri_monarchism:0 "British Malaya"
+ MEN_men_monarchism_ADJ:0 "Mongolian"
+ MEN_men_monarchism_DEF:0 "The Mengjiang United Autonomous Government"
+ MEN_men_monarchism:0 "Mengjiang United Autonomous Government"
  MEX_ana_anarchism_ADJ:0 "Mexican"
  MEX_ana_anarchism_DEF:0 "The Mexican Anarchist Federation"
  MEX_ana_anarchism:0 "Mexican Anarchist Federation"
@@ -89,6 +104,9 @@
  PAT_ana_anarchism_ADJ:0 "Patagonian"
  PAT_ana_anarchism_DEF:0 "The Patagonian Workers' Federation"
  PAT_ana_anarchism:0 "Patagonian Workers' Federation"
+ PRC_jia_communism_ADJ:0 "Chinese"
+ PRC_jia_communism_DEF:0 "The Jiangxi Soviet"
+ PRC_jia_communism:0 "Jiangxi Soviet"
  PRU_bol_social_democracy_ADJ:0 "Peruvian-Bolivian"
  PRU_bol_social_democracy_DEF:0 "The Peru-Bolivian Confederation"
  PRU_bol_social_democracy:0 "Peru-Bolivian Confederation"
