--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -598,3 +598,5 @@
  VICTORY_POINTS_10848:0 "Hermosillo"
  VICTORY_POINTS_12736:0 "La Paz"
  VICTORY_POINTS_5173:0 "Río Gallegos"
+ VICTORY_POINTS_12828:0 "Paramaribo"
+ VICTORY_POINTS_4928:0 "Georgetown"
