--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -6,8 +6,8 @@
  ANG_por_fascism_DEF:0 "The Province of Angola"
  ANG_por_fascism:0 "Province of Angola"
  AST_syn_syndicalism_ADJ:0 "Australasian"
- AST_syn_syndicalism_DEF:0 "The Australasian Syndicate"
- AST_syn_syndicalism:0 "Australasian Syndicate"
+ AST_syn_syndicalism_DEF:0 "The Australasian Syndicates"
+ AST_syn_syndicalism:0 "Australasian Syndicates"
  AUS_gre_fascism_ADJ:0 "Austrian"
  AUS_gre_fascism_DEF:0 "The Federal State of Greater Austria"
  AUS_gre_fascism:0 "Federal State of Greater Austria"
@@ -26,9 +26,9 @@
  CHI_kuo_ultranationalism_ADJ:0 "Chinese"
  CHI_kuo_ultranationalism_DEF:0 "The Kuomintang"
  CHI_kuo_ultranationalism:0 "Kuomintang"
- COG_bel_monarchism_ADJ:0 "Congolese"
- COG_bel_monarchism_DEF:0 "The Belgian Congo"
- COG_bel_monarchism:0 "Belgian Congo"
+ COG_bel_christian_democracy_ADJ:0 "Congolese"
+ COG_bel_christian_democracy_DEF:0 "The Belgian Congo"
+ COG_bel_christian_democracy:0 "Belgian Congo"
  CRO_gre_fascism_ADJ:0 "Croatian"
  CRO_gre_fascism_DEF:0 "The State of Greater Croatia"
  CRO_gre_fascism:0 "State of Greater Croatia"
@@ -129,8 +129,8 @@
  UKR_com_communism_DEF:0 "The Ukrainian SSR"
  UKR_com_communism:0 "Ukrainian SSR"
  UOA_syn_syndicalism_ADJ:0 "American"
- UOA_syn_syndicalism_DEF:0 "The Syndicalist League of America"
- UOA_syn_syndicalism:0 "Syndicalist League of America"
+ UOA_syn_syndicalism_DEF:0 "The American Union"
+ UOA_syn_syndicalism:0 "American Union"
  VIN_fra_social_democracy_ADJ:0 "Indochinese"
  VIN_fra_social_democracy_DEF:0 "The Indochinese Federation"
  VIN_fra_social_democracy:0 "Indochinese Federation"
