--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -8,12 +8,6 @@
  AST_syn_syndicalism_ADJ:0 "Australasian"
  AST_syn_syndicalism_DEF:0 "The Australasian Syndicates"
  AST_syn_syndicalism:0 "Australasian Syndicates"
- AUS_gre_fascism_ADJ:0 "Austrian"
- AUS_gre_fascism_DEF:0 "The Federal State of Greater Austria"
- AUS_gre_fascism:0 "Federal State of Greater Austria"
- AUS_gre_ultranationalism_ADJ:0 "Austrian"
- AUS_gre_ultranationalism_DEF:0 "The Federal State of Greater Austria"
- AUS_gre_ultranationalism:0 "Federal State of Greater Austria"
  BAH_con_conservatism_ADJ:0 "Brazilian"
  BAH_con_conservatism_DEF:0 "The Confederation of the Equator"
  BAH_con_conservatism:0 "Confederation of the Equator"
@@ -122,6 +116,9 @@
  SOV_com_communism_ADJ:0 "Russian"
  SOV_com_communism_DEF:0 "The Russian SFSR"
  SOV_com_communism:0 "Russian SFSR"
+ SPR_ana_anarchism_ADJ:0 "Iberian"
+ SPR_ana_anarchism_DEF:0 "The Iberian Anarchist Federation"
+ SPR_ana_anarchism:0 "Iberian Anarchist Federation"
  TGN_bri_monarchism_ADJ:0 "Tanganyikan"
  TGN_bri_monarchism_DEF:0 "The Tanganyika Territory"
  TGN_bri_monarchism:0 "Tanganyika Territory"
