--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -600,3 +600,4 @@
  VICTORY_POINTS_5173:0 "Río Gallegos"
  VICTORY_POINTS_12828:0 "Paramaribo"
  VICTORY_POINTS_4928:0 "Georgetown"
+ VICTORY_POINTS_11564:0 "Fiume"
