--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -208,8 +208,8 @@
  AUS_conservatism_DEF:0 "The Republic of Austria"
  AUS_conservatism:0 "Republic of Austria"
  AUS_fascism_ADJ:0 "Austrian"
- AUS_fascism_DEF:0 "The Republic of Austria"
- AUS_fascism:0 "Republic of Austria"
+ AUS_fascism_DEF:0 "The Federal State of Austria"
+ AUS_fascism:0 "Federal State of Austria"
  AUS_liberalism_ADJ:0 "Austrian"
  AUS_liberalism_DEF:0 "The Republic of Austria"
  AUS_liberalism:0 "Republic of Austria"
@@ -220,8 +220,8 @@
  AUS_syndicalism_DEF:0 "The Syndicate of Austria"
  AUS_syndicalism:0 "Syndicate of Austria"
  AUS_ultranationalism_ADJ:0 "Austrian"
- AUS_ultranationalism_DEF:0 "The Republic of Austria"
- AUS_ultranationalism:0 "Republic of Austria"
+ AUS_ultranationalism_DEF:0 "The Federal State of Greater Austria"
+ AUS_ultranationalism:0 "Federal State of Greater Austria"
  ###################################################
  ###################################################
  BAH_anarchism_ADJ:0 "Brazilian"
@@ -1150,6 +1150,38 @@
  FIN_ultranationalism_ADJ:0 "Finnish"
  FIN_ultranationalism_DEF:0 "The Republic of Finland"
  FIN_ultranationalism:0 "Republic of Finland"
+ ###################################################
+ ###################################################
+ FIU_anarchism_ADJ:0 "Italian"
+ FIU_anarchism_DEF:0 "The Free State of Fiume"
+ FIU_anarchism:0 "Free State of Fiume"
+ FIU_monarchism_ADJ:0 "Italian"
+ FIU_monarchism_DEF:0 "The Free State of Fiume"
+ FIU_monarchism:0 "Free State of Fiume"
+ FIU_christian_democracy_ADJ:0 "Italian"
+ FIU_christian_democracy_DEF:0 "The Free State of Fiume"
+ FIU_christian_democracy:0 "Free State of Fiume"
+ FIU_communism_ADJ:0 "Italian"
+ FIU_communism_DEF:0 "The Commune of Fiume"
+ FIU_communism:0 "Commune of Fiume"
+ FIU_conservatism_ADJ:0 "Italian"
+ FIU_conservatism_DEF:0 "The Free State of Fiume"
+ FIU_conservatism:0 "Free State of Fiume"
+ FIU_fascism_ADJ:0 "Italian"
+ FIU_fascism_DEF:0 "The Free State of Fiume"
+ FIU_fascism:0 "Free State of Fiume"
+ FIU_liberalism_ADJ:0 "Italian"
+ FIU_liberalism_DEF:0 "The Free State of Fiume"
+ FIU_liberalism:0 "Free State of Fiume"
+ FIU_social_democracy_ADJ:0 "Italian"
+ FIU_social_democracy_DEF:0 "The Free State of Fiume"
+ FIU_social_democracy:0 "Free State of Fiume"
+ FIU_syndicalism_ADJ:0 "Italian"
+ FIU_syndicalism_DEF:0 "The Free State of Fiume"
+ FIU_syndicalism:0 "Free State of Fiume"
+ FIU_ultranationalism_ADJ:0 "Italian"
+ FIU_ultranationalism_DEF:0 "The Free State of Fiume"
+ FIU_ultranationalism:0 "Free State of Fiume"
  ###################################################
  ###################################################
  FLA_anarchism_ADJ:0 "Flemish"
