--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -6,8 +6,8 @@
  ANG_por_fascism_DEF:0 "The Province of Angola"
  ANG_por_fascism:0 "Province of Angola"
  AST_syn_syndicalism_ADJ:0 "Australasian"
- AST_syn_syndicalism_DEF:0 "The Australasian Syndicates"
- AST_syn_syndicalism:0 "Australasian Syndicates"
+ AST_syn_syndicalism_DEF:0 "The Australasian Union"
+ AST_syn_syndicalism:0 "Australasian Union"
  BAH_con_conservatism_ADJ:0 "Brazilian"
  BAH_con_conservatism_DEF:0 "The Confederation of the Equator"
  BAH_con_conservatism:0 "Confederation of the Equator"
@@ -26,9 +26,6 @@
  CRO_gre_fascism_ADJ:0 "Croatian"
  CRO_gre_fascism_DEF:0 "The State of Greater Croatia"
  CRO_gre_fascism:0 "State of Greater Croatia"
- CRO_gre_ultranationalism_ADJ:0 "Croatian"
- CRO_gre_ultranationalism_DEF:0 "The State of Greater Croatia"
- CRO_gre_ultranationalism:0 "State of Greater Croatia"
  DDR_com_communism_ADJ:0 "Volga German"
  DDR_com_communism_DEF:0 "The Volga German ASSR"
  DDR_com_communism:0 "Volga German ASSR"
@@ -44,9 +41,6 @@
  GEO_com_communism_ADJ:0 "Transcaucasian"
  GEO_com_communism_DEF:0 "The Transcaucasian SFSR"
  GEO_com_communism:0 "Transcaucasian SFSR"
- GER_com_communism_ADJ:0 "German"
- GER_com_communism_DEF:0 "The German SFSR"
- GER_com_communism:0 "German SFSR"
  GXC_fuj_social_democracy_ADJ:0 "Chinese"
  GXC_fuj_social_democracy_DEF:0 "The Fujian People’s Government"
  GXC_fuj_social_democracy:0 "Fujian People’s Government"
