--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -185,8 +185,8 @@
  AST_social_democracy_DEF:0 "The Federation of Australasia"
  AST_social_democracy:0 "Federation of Australasia"
  AST_syndicalism_ADJ:0 "Australasian"
- AST_syndicalism_DEF:0 "The Australasian Syndicates"
- AST_syndicalism:0 "Australasian Syndicates"
+ AST_syndicalism_DEF:0 "The Australasian Union"
+ AST_syndicalism:0 "Australasian Union"
  AST_ultranationalism_ADJ:0 "Australasian"
  AST_ultranationalism_DEF:0 "The Federation of Australasia"
  AST_ultranationalism:0 "Federation of Australasia"
@@ -1290,8 +1290,8 @@
  GER_christian_democracy_DEF:0 "The German Republic"
  GER_christian_democracy:0 "German Republic"
  GER_communism_ADJ:0 "German"
- GER_communism_DEF:0 "The German SFSR"
- GER_communism:0 "German SFSR"
+ GER_communism_DEF:0 "The German Socialist Republic"
+ GER_communism:0 "German Socialist Republic"
  GER_conservatism_ADJ:0 "German"
  GER_conservatism_DEF:0 "The German Republic"
  GER_conservatism:0 "German Republic"
@@ -1305,8 +1305,8 @@
  GER_social_democracy_DEF:0 "The German Republic"
  GER_social_democracy:0 "German Republic"
  GER_syndicalism_ADJ:0 "German"
- GER_syndicalism_DEF:0 "The German Syndicate"
- GER_syndicalism:0 "German Syndicate"
+ GER_syndicalism_DEF:0 "The German Union"
+ GER_syndicalism:0 "German Union"
  GER_ultranationalism_ADJ:0 "German"
  GER_ultranationalism_DEF:0 "The German Republic"
  GER_ultranationalism:0 "German Republic"
