--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -996,32 +996,32 @@
  ENG_anarchism_DEF:0 "The Workers' Federation of Britain"
  ENG_anarchism:0 "Workers' Federation of Britain"
  ENG_monarchism_ADJ:0 "British"
- ENG_monarchism_DEF:0 "The United Republic"
- ENG_monarchism:0 "United Republic"
+ ENG_monarchism_DEF:0 "The Republic of Great Britain"
+ ENG_monarchism:0 "Republic of Great Britain"
  ENG_christian_democracy_ADJ:0 "British"
- ENG_christian_democracy_DEF:0 "The United Republic"
- ENG_christian_democracy:0 "United Republic"
+ ENG_christian_democracy_DEF:0 "The Republic of Great Britain"
+ ENG_christian_democracy:0 "Republic of Great Britain"
  ENG_communism_ADJ:0 "British"
- ENG_communism_DEF:0 "The People's United Republic"
- ENG_communism:0 "People's United Republic"
+ ENG_communism_DEF:0 "The People's Republic of Great Britain"
+ ENG_communism:0 "People's Republic of Great Britain"
  ENG_conservatism_ADJ:0 "British"
- ENG_conservatism_DEF:0 "The United Republic"
- ENG_conservatism:0 "United Republic"
+ ENG_conservatism_DEF:0 "The Republic of Great Britain"
+ ENG_conservatism:0 "Republic of Great Britain"
  ENG_fascism_ADJ:0 "British"
- ENG_fascism_DEF:0 "The United Republic"
- ENG_fascism:0 "United Republic"
+ ENG_fascism_DEF:0 "The Commonwealth of Britain"
+ ENG_fascism:0 "Commonwealth of Britain"
  ENG_liberalism_ADJ:0 "British"
- ENG_liberalism_DEF:0 "The United Republic"
- ENG_liberalism:0 "United Republic"
+ ENG_liberalism_DEF:0 "The Republic of Great Britain"
+ ENG_liberalism:0 "Republic of Great Britain"
  ENG_social_democracy_ADJ:0 "British"
- ENG_social_democracy_DEF:0 "The United Republic"
- ENG_social_democracy:0 "United Republic"
+ ENG_social_democracy_DEF:0 "The Republic of Great Britain"
+ ENG_social_democracy:0 "Republic of Great Britain"
  ENG_syndicalism_ADJ:0 "British"
  ENG_syndicalism_DEF:0 "The Union of Britain"
  ENG_syndicalism:0 "Union of Britain"
  ENG_ultranationalism_ADJ:0 "British"
- ENG_ultranationalism_DEF:0 "The United Republic"
- ENG_ultranationalism:0 "United Republic"
+ ENG_ultranationalism_DEF:0 "The Commonwealth of Britain"
+ ENG_ultranationalism:0 "Commonwealth of Britain"
  ###################################################
  ###################################################
  EST_anarchism_ADJ:0 "Estonian"
