--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -5,9 +5,12 @@
  ANG_por_fascism_ADJ:0 "Angolan"
  ANG_por_fascism_DEF:0 "The Province of Angola"
  ANG_por_fascism:0 "Province of Angola"
- AST_syn_national_socialism_ADJ:0 "Australasian"
- AST_syn_national_socialism_DEF:0 "The Australasian Union"
- AST_syn_national_socialism:0 "Australasian Union"
+ ARG_ult_ultranationalism_ADJ:0 "Argentine"
+ ARG_ult_ultranationalism_DEF:0 "The Argentine Confederation"
+ ARG_ult_ultranationalism:0 "Argentine Confederation"
+ AST_syn_libertarian_socialism_ADJ:0 "Australasian"
+ AST_syn_libertarian_socialism_DEF:0 "The Australasian Union"
+ AST_syn_libertarian_socialism:0 "Australasian Union"
  BAH_con_conservatism_ADJ:0 "Brazilian"
  BAH_con_conservatism_DEF:0 "The Confederation of the Equator"
  BAH_con_conservatism:0 "Confederation of the Equator"
@@ -98,12 +101,12 @@
  RAJ_bri_authoritarianism_ADJ:0 "British"
  RAJ_bri_authoritarianism_DEF:0 "The British Empire"
  RAJ_bri_authoritarianism:0 "British Empire"
- SAF_syn_national_socialism_ADJ:0 "South African"
- SAF_syn_national_socialism_DEF:0 "The Syndicate of South Africa"
- SAF_syn_national_socialism:0 "Syndicate of South Africa"
- SAO_syn_national_socialism_ADJ:0 "Brazilian"
- SAO_syn_national_socialism_DEF:0 "The Piratini Union"
- SAO_syn_national_socialism:0 "Piratini Union"
+ SAF_syn_libertarian_socialism_ADJ:0 "South African"
+ SAF_syn_libertarian_socialism_DEF:0 "The Syndicate of South Africa"
+ SAF_syn_libertarian_socialism:0 "Syndicate of South Africa"
+ SAO_syn_libertarian_socialism_ADJ:0 "Brazilian"
+ SAO_syn_libertarian_socialism_DEF:0 "The Piratini Union"
+ SAO_syn_libertarian_socialism:0 "Piratini Union"
  SOV_com_communism_ADJ:0 "Russian"
  SOV_com_communism_DEF:0 "The Russian SFSR"
  SOV_com_communism:0 "Russian SFSR"
@@ -116,9 +119,9 @@
  UKR_com_communism_ADJ:0 "Ukrainian"
  UKR_com_communism_DEF:0 "The Ukrainian SSR"
  UKR_com_communism:0 "Ukrainian SSR"
- UOA_syn_national_socialism_ADJ:0 "American"
- UOA_syn_national_socialism_DEF:0 "The American Union"
- UOA_syn_national_socialism:0 "American Union"
+ UOA_syn_libertarian_socialism_ADJ:0 "American"
+ UOA_syn_libertarian_socialism_DEF:0 "The American Union"
+ UOA_syn_libertarian_socialism:0 "American Union"
  VIN_fra_social_democracy_ADJ:0 "Indochinese"
  VIN_fra_social_democracy_DEF:0 "The Indochinese Federation"
  VIN_fra_social_democracy:0 "Indochinese Federation"
