--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -2,23 +2,23 @@
  communism:0 "Marxism-Leninism"
  communism_noun:0 "Communist"
  communist_desc:0 "A Marxist-Leninist regime"
- communism_desc:0 "Marxist-Leninist"
+ communism_desc:0 "Communist"
  national_socialism:0 "National Socialism"
  national_socialism_noun:0 "Nazi"
  national_socialist_desc:0 "A national socialist regime"
- national_socialism_desc:0 "National Socialist"
+ national_socialism_desc:0 "Totalitarian"
  social_democracy:0 "Social Democracy"
  social_democracy_noun:0 "Social Democrat"
  social_democrat_desc:0 "A social democrat regime"
- social_democracy_desc:0 "Social Democratic"
+ social_democracy_desc:0 "Democratic"
  liberalism:0 "Market Liberalism"
  liberalism_noun:0 "Liberal"
  liberal_desc:0 "A market liberal regime"
- liberalism_desc:0 "Market Liberal"
+ liberalism_desc:0 "Democratic"
  conservatism:0 "Liberal Conservatism"
  conservatism_noun:0 "Conservative"
  conservative_desc:0 "A liberal conservative regime"
- conservatism_desc:0 "Liberal Conservative"
+ conservatism_desc:0 "Democratic"
  authoritarianism:0 "Authoritarianism"
  authoritarianism_noun:0 "Authoritarian"
  authoritarian_desc:0 "A dictatorial authoritarian regime"
@@ -26,16 +26,16 @@
  fascism:0 "Fascism"
  fascism_noun:0 "Fascist"
  fascist_desc:0 "A corporatist fascist regime"
- fascism_desc:0 "Corporatist Fascist"
+ fascism_desc:0 "Corporatist"
  ultranationalism:0 "Ultranationalism"
  ultranationalism_noun:0 "Ultranationalist"
  ultranationalist_desc:0 "A radical ultranationalist regime"
- ultranationalism_desc:0 "Radical Ultranationalist"
+ ultranationalism_desc:0 "Radical"
  libertarian_socialism:0 "Libertarian Socialism"
  libertarian_socialism_noun:0 "Socialist"
  libertarian_socialist_desc:0 "A libertarian socialist regime"
- libertarian_socialism_desc:0 "Libertarian Socialist"
+ libertarian_socialism_desc:0 "Anarchist"
  christian_democracy:0 "Christian Democracy"
  christian_democracy_noun:0 "Christian Democrat"
  christian_democrat_desc:0 "A christian democrat regime"
- christian_democracy_desc:0 "Christian Democratic"
+ christian_democracy_desc:0 "Democratic"
