--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -47,21 +47,21 @@
  AFN_conservatism_ADJ:0 "Algerian"
  AFN_conservatism_DEF:0 "The People's Democratic Republic of Algeria"
  AFN_conservatism:0 "People's Democratic Republic of Algeria"
- AFN_fascism_ADJ:0 "Algerian"
- AFN_fascism_DEF:0 "The People's Democratic Republic of Algeria"
- AFN_fascism:0 "People's Democratic Republic of Algeria"
+ AFN_fascism_ADJ:0 "French"
+ AFN_fascism_DEF:0 "The French State"
+ AFN_fascism:0 "French State"
  AFN_liberalism_ADJ:0 "Algerian"
  AFN_liberalism_DEF:0 "The People's Democratic Republic of Algeria"
  AFN_liberalism:0 "People's Democratic Republic of Algeria"
  AFN_social_democracy_ADJ:0 "Algerian"
  AFN_social_democracy_DEF:0 "The People's Democratic Republic of Algeria"
  AFN_social_democracy:0 "People's Democratic Republic of Algeria"
- AFN_national_socialism_ADJ:0 "Algerian"
- AFN_national_socialism_DEF:0 "The People's Democratic Republic of Algeria"
- AFN_national_socialism:0 "People's Democratic Republic of Algeria"
- AFN_ultranationalism_ADJ:0 "Algerian"
- AFN_ultranationalism_DEF:0 "The People's Democratic Republic of Algeria"
- AFN_ultranationalism:0 "People's Democratic Republic of Algeria"
+ AFN_national_socialism_ADJ:0 "French"
+ AFN_national_socialism_DEF:0 "The French State"
+ AFN_national_socialism:0 "French State"
+ AFN_ultranationalism_ADJ:0 "French"
+ AFN_ultranationalism_DEF:0 "The French State"
+ AFN_ultranationalism:0 "French State"
  ###################################################
  ###################################################
  ALB_libertarian_socialism_ADJ:0 "Albanian"
@@ -2116,32 +2116,32 @@
  NAT_libertarian_socialism_DEF:0 "The Workers' Federation of Natal"
  NAT_libertarian_socialism:0 "Workers' Federation of Natal"
  NAT_authoritarianism_ADJ:0 "South African"
- NAT_authoritarianism_DEF:0 "The Colony of Natal"
- NAT_authoritarianism:0 "Colony of Natal"
+ NAT_authoritarianism_DEF:0 "The Natalia Republic"
+ NAT_authoritarianism:0 "Natalia Republic"
  NAT_christian_democracy_ADJ:0 "South African"
- NAT_christian_democracy_DEF:0 "The Colony of Natal"
- NAT_christian_democracy:0 "Colony of Natal"
+ NAT_christian_democracy_DEF:0 "The Natalia Republic"
+ NAT_christian_democracy:0 "Natalia Republic"
  NAT_communism_ADJ:0 "South African"
  NAT_communism_DEF:0 "The Commune of Natal"
  NAT_communism:0 "Commune of Natal"
  NAT_conservatism_ADJ:0 "South African"
- NAT_conservatism_DEF:0 "The Colony of Natal"
- NAT_conservatism:0 "Colony of Natal"
+ NAT_conservatism_DEF:0 "The Natalia Republic"
+ NAT_conservatism:0 "Natalia Republic"
  NAT_fascism_ADJ:0 "South African"
- NAT_fascism_DEF:0 "The Colony of Natal"
- NAT_fascism:0 "Colony of Natal"
+ NAT_fascism_DEF:0 "The Natalia Republic"
+ NAT_fascism:0 "Natalia Republic"
  NAT_liberalism_ADJ:0 "South African"
- NAT_liberalism_DEF:0 "The Colony of Natal"
- NAT_liberalism:0 "Colony of Natal"
+ NAT_liberalism_DEF:0 "The Natalia Republic"
+ NAT_liberalism:0 "Natalia Republic"
  NAT_social_democracy_ADJ:0 "South African"
- NAT_social_democracy_DEF:0 "The Colony of Natal"
- NAT_social_democracy:0 "Colony of Natal"
+ NAT_social_democracy_DEF:0 "The Natalia Republic"
+ NAT_social_democracy:0 "Natalia Republic"
  NAT_national_socialism_ADJ:0 "South African"
- NAT_national_socialism_DEF:0 "The Colony of Natal"
- NAT_national_socialism:0 "Colony of Natal"
+ NAT_national_socialism_DEF:0 "The Natalia Republic"
+ NAT_national_socialism:0 "Natalia Republic"
  NAT_ultranationalism_ADJ:0 "South African"
- NAT_ultranationalism_DEF:0 "The Colony of Natal"
- NAT_ultranationalism:0 "Colony of Natal"
+ NAT_ultranationalism_DEF:0 "The Natalia Republic"
+ NAT_ultranationalism:0 "Natalia Republic"
  ###################################################
  ###################################################
  NEP_libertarian_socialism_ADJ:0 "Nepalese"
