--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -394,8 +394,8 @@
  BOT_christian_democracy_DEF:0 "The Republic of Botswana"
  BOT_christian_democracy:0 "Republic of Botswana"
  BOT_communism_ADJ:0 "Botswanan"
- BOT_communism_DEF:0 "The Republic of Botswana"
- BOT_communism:0 "Republic of Botswana"
+ BOT_communism_DEF:0 "The People's Republic of Botswana"
+ BOT_communism:0 "People's Republic of Botswana"
  BOT_conservatism_ADJ:0 "Botswanan"
  BOT_conservatism_DEF:0 "The Republic of Botswana"
  BOT_conservatism:0 "Republic of Botswana"
@@ -490,8 +490,8 @@
  CAL_christian_democracy_DEF:0 "The California Republic"
  CAL_christian_democracy:0 "California Republic"
  CAL_communism_ADJ:0 "American"
- CAL_communism_DEF:0 "The California Republic"
- CAL_communism:0 "California Republic"
+ CAL_communism_DEF:0 "The California People's Republic"
+ CAL_communism:0 "California People's Republic"
  CAL_conservatism_ADJ:0 "American"
  CAL_conservatism_DEF:0 "The California Republic"
  CAL_conservatism:0 "California Republic"
@@ -612,26 +612,26 @@
  COG_libertarian_socialism_DEF:0 "The Workers' Federation of Zaire"
  COG_libertarian_socialism:0 "Workers' Federation of Zaire"
  COG_authoritarianism_ADJ:0 "Congolese"
- COG_authoritarianism_DEF:0 "The Republic of Zaire"
- COG_authoritarianism:0 "Republic of Zaire"
+ COG_authoritarianism_DEF:0 "The Belgian Congo"
+ COG_authoritarianism:0 "Belgian Congo"
  COG_christian_democracy_ADJ:0 "Congolese"
- COG_christian_democracy_DEF:0 "The Republic of Zaire"
- COG_christian_democracy:0 "Republic of Zaire"
+ COG_christian_democracy_DEF:0 "The Democratic Republic of the Congo"
+ COG_christian_democracy:0 "Democratic Republic of the Congo"
  COG_communism_ADJ:0 "Congolese"
- COG_communism_DEF:0 "The Republic of Zaire"
- COG_communism:0 "Republic of Zaire"
+ COG_communism_DEF:0 "The People's Democratic Republic of the Congo"
+ COG_communism:0 "People's Democratic Republic of the Congo"
  COG_conservatism_ADJ:0 "Congolese"
- COG_conservatism_DEF:0 "The Republic of Zaire"
- COG_conservatism:0 "Republic of Zaire"
+ COG_conservatism_DEF:0 "The Democratic Republic of the Congo"
+ COG_conservatism:0 "Democratic Republic of the Congo"
  COG_fascism_ADJ:0 "Congolese"
  COG_fascism_DEF:0 "The Republic of Zaire"
  COG_fascism:0 "Republic of Zaire"
  COG_liberalism_ADJ:0 "Congolese"
- COG_liberalism_DEF:0 "The Republic of Zaire"
- COG_liberalism:0 "Republic of Zaire"
+ COG_liberalism_DEF:0 "The Democratic Republic of the Congo"
+ COG_liberalism:0 "Democratic Republic of the Congo"
  COG_social_democracy_ADJ:0 "Congolese"
- COG_social_democracy_DEF:0 "The Republic of Zaire"
- COG_social_democracy:0 "Republic of Zaire"
+ COG_social_democracy_DEF:0 "The Democratic Republic of the Congo"
+ COG_social_democracy:0 "Democratic Republic of the Congo"
  COG_national_socialism_ADJ:0 "Congolese"
  COG_national_socialism_DEF:0 "The Republic of Zaire"
  COG_national_socialism:0 "Republic of Zaire"
@@ -682,8 +682,8 @@
  COS_christian_democracy_DEF:0 "The Federation of Central America"
  COS_christian_democracy:0 "Federation of Central America"
  COS_communism_ADJ:0 "Central American"
- COS_communism_DEF:0 "The Federation of Central America"
- COS_communism:0 "Federation of Central America"
+ COS_communism_DEF:0 "The Vanguard Union of Central America"
+ COS_communism:0 "Vanguard Union of Central America"
  COS_conservatism_ADJ:0 "Central American"
  COS_conservatism_DEF:0 "The Federation of Central America"
  COS_conservatism:0 "Federation of Central America"
@@ -714,8 +714,8 @@
  CRO_christian_democracy_DEF:0 "The Republic of Croatia"
  CRO_christian_democracy:0 "Republic of Croatia"
  CRO_communism_ADJ:0 "Croatian"
- CRO_communism_DEF:0 "The Republic of Croatia"
- CRO_communism:0 "Republic of Croatia"
+ CRO_communism_DEF:0 "The Socialist Republic of Croatia"
+ CRO_communism:0 "Socialist Republic of Croatia"
  CRO_conservatism_ADJ:0 "Croatian"
  CRO_conservatism_DEF:0 "The Republic of Croatia"
  CRO_conservatism:0 "Republic of Croatia"
@@ -1472,6 +1472,38 @@
  HOL_ultranationalism:0 "Dutchland"
  ###################################################
  ###################################################
+ HON_libertarian_socialism_ADJ:0 "Central American"
+ HON_libertarian_socialism_DEF:0 "The Anarchist Federation of Central America"
+ HON_libertarian_socialism:0 "Anarchist Federation of Central America"
+ HON_authoritarianism_ADJ:0 "Central American"
+ HON_authoritarianism_DEF:0 "The Greater Republic of Central America"
+ HON_authoritarianism:0 "Greater Republic of Central America"
+ HON_christian_democracy_ADJ:0 "Central American"
+ HON_christian_democracy_DEF:0 "The Greater Republic of Central America"
+ HON_christian_democracy:0 "Greater Republic of Central America"
+ HON_communism_ADJ:0 "Central American"
+ HON_communism_DEF:0 "The People's Republic of Central America"
+ HON_communism:0 "People's Republic of Central America"
+ HON_conservatism_ADJ:0 "Central American"
+ HON_conservatism_DEF:0 "The Greater Republic of Central America"
+ HON_conservatism:0 "Greater Republic of Central America"
+ HON_fascism_ADJ:0 "Central American"
+ HON_fascism_DEF:0 "The Greater Republic of Central America"
+ HON_fascism:0 "Greater Republic of Central America"
+ HON_liberalism_ADJ:0 "Central American"
+ HON_liberalism_DEF:0 "The Greater Republic of Central America"
+ HON_liberalism:0 "Greater Republic of Central America"
+ HON_social_democracy_ADJ:0 "Central American"
+ HON_social_democracy_DEF:0 "The Greater Republic of Central America"
+ HON_social_democracy:0 "Greater Republic of Central America"
+ HON_national_socialism_ADJ:0 "Central American"
+ HON_national_socialism_DEF:0 "The Greater Republic of Central America"
+ HON_national_socialism:0 "Greater Republic of Central America"
+ HON_ultranationalism_ADJ:0 "Central American"
+ HON_ultranationalism_DEF:0 "The Greater Republic of Central America"
+ HON_ultranationalism:0 "Greater Republic of Central America"
+ ###################################################
+ ###################################################
  HUN_libertarian_socialism_ADJ:0 "Hungarian"
  HUN_libertarian_socialism_DEF:0 "The Workers' Federation of Hungary"
  HUN_libertarian_socialism:0 "Workers' Federation of Hungary"
@@ -1482,8 +1514,8 @@
  HUN_christian_democracy_DEF:0 "The Kingdom of Hungary"
  HUN_christian_democracy:0 "Kingdom of Hungary"
  HUN_communism_ADJ:0 "Hungarian"
- HUN_communism_DEF:0 "The People's Republic of Hungary"
- HUN_communism:0 "People's Republic of Hungary"
+ HUN_communism_DEF:0 "The Hungarian SSR"
+ HUN_communism:0 "Hungarian SSR"
  HUN_conservatism_ADJ:0 "Hungarian"
  HUN_conservatism_DEF:0 "The Kingdom of Hungary"
  HUN_conservatism:0 "Kingdom of Hungary"
