--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -2976,6 +2976,38 @@
  SUD_ultranationalism:0 "Republic of South Sudan"
  ###################################################
  ###################################################
+ SVN_libertarian_socialism_ADJ:0 "Slovenian"
+ SVN_libertarian_socialism_DEF:0 "The Workers' Federation of Slovenia"
+ SVN_libertarian_socialism:0 "Workers' Federation of Slovenia"
+ SVN_authoritarianism_ADJ:0 "Illyrian"
+ SVN_authoritarianism_DEF:0 "The Kingdom of Illyria"
+ SVN_authoritarianism:0 "Kingdom of Illyria"
+ SVN_christian_democracy_ADJ:0 "Slovenian"
+ SVN_christian_democracy_DEF:0 "The Republic of Slovenia"
+ SVN_christian_democracy:0 "Republic of Slovenia"
+ SVN_communism_ADJ:0 "Slovenian"
+ SVN_communism_DEF:0 "The Socialist Republic of Slovenia"
+ SVN_communism:0 "Socialist Republic of Slovenia"
+ SVN_conservatism_ADJ:0 "Slovenian"
+ SVN_conservatism_DEF:0 "The Republic of Slovenia"
+ SVN_conservatism:0 "Republic of Slovenia"
+ SVN_fascism_ADJ:0 "Slovenian"
+ SVN_fascism_DEF:0 "The Republic of Slovenia"
+ SVN_fascism:0 "Republic of Slovenia"
+ SVN_liberalism_ADJ:0 "Slovenian"
+ SVN_liberalism_DEF:0 "The Republic of Slovenia"
+ SVN_liberalism:0 "Republic of Slovenia"
+ SVN_social_democracy_ADJ:0 "Slovenian"
+ SVN_social_democracy_DEF:0 "The Republic of Slovenia"
+ SVN_social_democracy:0 "Republic of Slovenia"
+ SVN_national_socialism_ADJ:0 "Slovenian"
+ SVN_national_socialism_DEF:0 "The Republic of Slovenia"
+ SVN_national_socialism:0 "Republic of Slovenia"
+ SVN_ultranationalism_ADJ:0 "Slovenian"
+ SVN_ultranationalism_DEF:0 "The Republic of Slovenia"
+ SVN_ultranationalism:0 "Republic of Slovenia"
+ ###################################################
+ ###################################################
  SWE_libertarian_socialism_ADJ:0 "Swedish"
  SWE_libertarian_socialism_DEF:0 "The Workers' Federation of Sweden"
  SWE_libertarian_socialism:0 "Workers' Federation of Sweden"
@@ -3463,23 +3495,23 @@
  YUG_authoritarianism_DEF:0 "The Kingdom of Serbia"
  YUG_authoritarianism:0 "Kingdom of Serbia"
  YUG_christian_democracy_ADJ:0 "Serbian"
- YUG_christian_democracy_DEF:0 "The Republic of Serbia"
- YUG_christian_democracy:0 "Republic of Serbia"
+ YUG_christian_democracy_DEF:0 "The Kingdom of Serbia"
+ YUG_christian_democracy:0 "Kingdom of Serbia"
  YUG_communism_ADJ:0 "Serbian"
  YUG_communism_DEF:0 "The Socialist Republic of Serbia"
  YUG_communism:0 "Socialist Republic of Serbia"
  YUG_conservatism_ADJ:0 "Serbian"
- YUG_conservatism_DEF:0 "The Republic of Serbia"
- YUG_conservatism:0 "Republic of Serbia"
+ YUG_conservatism_DEF:0 "The Kingdom of Serbia"
+ YUG_conservatism:0 "Kingdom of Serbia"
  YUG_fascism_ADJ:0 "Serbian"
  YUG_fascism_DEF:0 "The Kingdom of Serbia"
  YUG_fascism:0 "Kingdom of Serbia"
  YUG_liberalism_ADJ:0 "Serbian"
- YUG_liberalism_DEF:0 "The Republic of Serbia"
- YUG_liberalism:0 "Republic of Serbia"
+ YUG_liberalism_DEF:0 "The Kingdom of Serbia"
+ YUG_liberalism:0 "Kingdom of Serbia"
  YUG_social_democracy_ADJ:0 "Serbian"
- YUG_social_democracy_DEF:0 "The Republic of Serbia"
- YUG_social_democracy:0 "Republic of Serbia"
+ YUG_social_democracy_DEF:0 "The Kingdom of Serbia"
+ YUG_social_democracy:0 "Kingdom of Serbia"
  YUG_national_socialism_ADJ:0 "Serbian"
  YUG_national_socialism_DEF:0 "The Kingdom of Serbia"
  YUG_national_socialism:0 "Kingdom of Serbia"
