--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -3,8 +3,8 @@
  AFN_fra_social_democracy_DEF:0 "The French Africa"
  AFN_fra_social_democracy:0 "French Africa"
  ANG_por_ultranationalism_ADJ:0 "Angolan"
- ANG_por_ultranationalism_DEF:0 "The Province of Angola"
- ANG_por_ultranationalism:0 "Province of Angola"
+ ANG_por_ultranationalism_DEF:0 "The Angola Colony"
+ ANG_por_ultranationalism:0 "Angola Colony"
  ARG_ult_ultranationalism_ADJ:0 "Argentine"
  ARG_ult_ultranationalism_DEF:0 "The Argentine Confederation"
  ARG_ult_ultranationalism:0 "Argentine Confederation"
@@ -20,12 +20,15 @@
  BRA_aut_authoritarianism_ADJ:0 "Brazilian"
  BRA_aut_authoritarianism_DEF:0 "The Empire of Brazil"
  BRA_aut_authoritarianism:0 "Empire of Brazil"
+ BRA_fas_fascism_ADJ:0 "Brazilian"
+ BRA_fas_fascism_DEF:0 "The Integralist Brazil"
+ BRA_fas_fascism:0 "Integralist Brazil"
  CHI_kuo_ultranationalism_ADJ:0 "Chinese"
  CHI_kuo_ultranationalism_DEF:0 "The Kuomintang"
  CHI_kuo_ultranationalism:0 "Kuomintang"
- COG_bel_christian_democracy_ADJ:0 "Congolese"
- COG_bel_christian_democracy_DEF:0 "The Belgian Congo"
- COG_bel_christian_democracy:0 "Belgian Congo"
+ COG_bel_authoritarianism_ADJ:0 "Congolese"
+ COG_bel_authoritarianism_DEF:0 "The Belgian Congo"
+ COG_bel_authoritarianism:0 "Belgian Congo"
  CRO_gre_fascism_ADJ:0 "Croatian"
  CRO_gre_fascism_DEF:0 "The State of Greater Croatia"
  CRO_gre_fascism:0 "State of Greater Croatia"
